# github-review-agent

./: .gitignore  app.py  main.py  pyproject.toml
src/github_review_agent/: client.py  config.py  github_client.py  graph.py  review_workflow_service.py  router.py  state.py
src/github_review_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/github_review_agent/api/: server.py
src/github_review_agent/approval/: __init__.py  approval_request.py  approval_store.py  token_service.py
src/github_review_agent/builders/: review_context_builder.py
src/github_review_agent/email/: email_service.py  templates.py
src/github_review_agent/memory/: checkpointer.py
src/github_review_agent/models/: file_change.py  merge_result.py  pull_request.py  pull_request_summary.py  review.py  review_comment.py  review_request.py
src/github_review_agent/nodes/: approval.py  fetch_pr.py  merge_pr.py  reject_pr.py  review_pr.py
src/github_review_agent/prompts/: review_prompt.py
src/github_review_agent/scheduler/: review_scheduler.py
src/github_review_agent/scheduler/jobs/: scan_pull_requests.py
src/github_review_agent/servers/: github_server.py
src/github_review_agent/services/: ai_review_service.py  github_service.py
src/github_review_agent/workflow/: workflow_manager.py
tests/: t1.py  t2.py  test_client.py  test_github_service.py  test_graph.py
