[project]
name = "github-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "fastmcp>=3.4.4",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "pygithub>=2.9.1",
    "uvicorn>=0.51.0",
]
